--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -4,14 +4,30 @@
     <div class="row g-4">
 
       <!-- School Info -->
-      <div class="col-md-4">
+      <!-- <div class="col-md-4">
         <h5 class="fw-bold">Little Flower Public School</h5>
         <p class="small">
           Providing quality education from Nursery to Class 6
           in a safe and caring environment.
         </p>
-      </div>
+      </div> -->
 
+
+      <div class="col-md-4 footer-brand">
+  <img
+    src="/assets/logo.png"
+    alt="Little Flower Public School Logo"
+    class="footer-logo"
+  />
+
+  <div>
+    <h5 class="fw-bold mb-1">Little Flower Public School</h5>
+    <p class="small mb-0">
+      Providing quality education from Nursery to Class 6
+      in a safe and caring environment.
+    </p>
+  </div>
+</div>
       <!-- Quick Links -->
       <div class="col-md-4">
         <h6 class="fw-semibold">Quick Links</h6>
@@ -28,7 +44,7 @@
       <div class="col-md-4">
         <h6 class="fw-semibold">Contact</h6>
         <p class="small mb-1">📍 Main Road, Bishanpur Malahatoli Samastipur</p>
-        <p class="small mb-1">📞 +91 98765 43210</p>
+        <p class="small mb-1">📞 +91 7369903206</p>
         <p class="small">
           📧 b170055&#64;nitsikkim.ac.in
         </p>
