--- a/src/app/admin/login/login.component.html
+++ b/src/app/admin/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container py-5">
+<!-- <div class="container py-5">
   <div class="row justify-content-center">
     <div class="col-md-4">
 
@@ -27,5 +27,95 @@
       </div>
 
     </div>
+  </div>
+</div> -->
+
+
+<div class="login-page">
+  <div class="container">
+    <div class="row justify-content-center align-items-center min-vh-100">
+      <div class="col-md-4 col-sm-10">
+
+        <div class="login-card">
+          <h4 class="text-center fw-bold mb-4">Admin Login</h4>
+
+          <form [formGroup]="loginForm" (ngSubmit)="login()">
+
+            <!-- <div class="mb-3">
+              <label class="form-label">Username</label>
+              <input class="form-control" placeholder="Enter username" formControlName="username" />
+            </div> -->
+           
+            <div class="mb-3 position-relative">
+  <label class="form-label">Username</label>
+
+  <i class="bi bi-person input-icon"></i>
+
+  <input
+    type="text"
+    class="form-control input-with-icon"
+    placeholder="User Name"
+    formControlName="username"
+  />
+</div>
+
+            <!-- <div class="mb-4 position-relative">
+              <label class="form-label">Password</label>
+ <i class="bi bi-lock input-icon"></i>
+              <input [type]="showPassword ? 'text' : 'password'" class="form-control pe-5" placeholder="Enter password"
+                formControlName="password" />
+
+              <i class="bi eye-icon" [ngClass]="showPassword ? 'bi-eye-slash' : 'bi-eye'"
+                (click)="togglePassword()"></i>
+            </div> -->
+
+            <div class="mb-4 position-relative">
+  <label class="form-label">Password</label>
+
+  <i class="bi bi-lock input-icon"></i>
+
+  <input
+    [type]="showPassword ? 'text' : 'password'"
+    class="form-control input-with-icon pe-5"
+    placeholder="Password"
+    formControlName="password"
+  />
+
+  <!-- Eye icon -->
+  <i
+    class="bi eye-toggle"
+    [ngClass]="showPassword ? 'bi-eye-slash' : 'bi-eye'"
+    (click)="togglePassword()"
+  ></i>
+</div>
+
+
+
+
+            <button class="btn btn-primary w-100 login-btn" type="submit" [disabled]="loading">
+              <span *ngIf="!loading">Login</span>
+
+              <span *ngIf="loading" class="spinner-wrapper">
+                <span class="spinner"></span>
+                Logging in...
+              </span>
+            </button>
+
+          </form>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+<!-- SUCCESS MODAL -->
+<div class="success-overlay" *ngIf="showSuccess">
+  <div class="success-modal">
+    <div class="check-icon">✔</div>
+    <h4>Login Successful 🎉</h4>
+    <p>Welcome to Admin Panel</p>
+    <button class="btn btn-primary w-100" (click)="goToDashboard()">
+      OK
+    </button>
   </div>
 </div>
