--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,57 +1,18 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
-  <div class="container">
-    <a class="navbar-brand fw-bold" routerLink="/">
-      ABC Public School
-    </a>
-
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#schoolNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="schoolNavbar">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link"
-   routerLink="/"
-   routerLinkActive="active"
-   [routerLinkActiveOptions]="{ exact: true }">
-   Home
-</a>
-
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/admissions">Admissions</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/gallery">Gallery</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/contact">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav> -->
-
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
   <div class="container">
-    <a class="navbar-brand fw-bold" routerLink="/">
-      Little Flower Public School
-    </a>
+   <a class="navbar-brand d-flex align-items-center gap-2 fw-bold" routerLink="/">
+  <img
+    src="/assets/logo.png"
+    alt="School Logo"
+    class="school-logo"
+  />
+  <span class="school-name">
+    Little Flower Public School
+  </span>
+</a>
 
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#schoolNavbar">
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#schoolNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -59,42 +20,31 @@
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
         <li class="nav-item">
-          <a class="nav-link"
-             routerLink="/"
-             routerLinkActive="active"
-             [routerLinkActiveOptions]="{ exact: true }">
+          <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
             Home
           </a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link"
-             routerLink="/about"
-             routerLinkActive="active">
+          <a class="nav-link" routerLink="/about" routerLinkActive="active">
             About
           </a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link"
-             routerLink="/admissions"
-             routerLinkActive="active">
+          <a class="nav-link" routerLink="/admissions" routerLinkActive="active">
             Admissions
           </a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link"
-             routerLink="/gallery"
-             routerLinkActive="active">
+          <a class="nav-link" routerLink="/gallery" routerLinkActive="active">
             Gallery
           </a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link"
-             routerLink="/contact"
-             routerLinkActive="active">
+          <a class="nav-link" routerLink="/contact" routerLinkActive="active">
             Contact
           </a>
         </li>
