--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -15,24 +15,24 @@
       <div class="p-4 bg-light rounded shadow-sm h-100">
         <h5 class="fw-semibold mb-3">School Address</h5>
 
-        <p class="mb-2">🏫 ABC Public School</p>
-        <p class="mb-2">📍 Main Road, Your City, Your State</p>
-        <p class="mb-2">📞 +91 98765 43210</p>
-        <p class="mb-2">📧 abcschool&#64;gmail.com
+        <p class="mb-2">🏫 Little Flower Public School</p>
+        <p class="mb-2">📍 Main Road, Bishanpur Malahatoli Samastipur</p>
+        <p class="mb-2">📞 +91 7369903206</p>
+        <p class="mb-2">📧 Littleflowerpublicschool&#64;gmail.com
 </p>
 
         <hr>
 
         <p class="fw-semibold mb-2">Quick Contact</p>
         <a
-          href="https://wa.me/919876543210"
+          href="https://wa.me/7369903206"
           target="_blank"
           class="btn btn-success btn-sm me-2">
           WhatsApp
         </a>
 
         <a
-          href="tel:9876543210"
+          href="tel:7369903206"
           class="btn btn-primary btn-sm">
           Call Now
         </a>
@@ -84,3 +84,11 @@
   </div>
 
 </div>
+
+<section class="map-section">
+  <div class="map-wrapper">
+    <iframe
+      src="https://www.google.com/maps?q=Little+Flower+Public+School+Samastipur&output=embed">
+    </iframe>
+  </div>
+</section>
