--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -23,8 +23,7 @@
   <div>
     <h5 class="fw-bold mb-1">Little Flower Public School</h5>
     <p class="small mb-0">
-      Providing quality education from Nursery to Class 6
-      in a safe and caring environment.
+     Quality education from Nursery to Class 6 in a safe, nurturing environment.
     </p>
   </div>
 </div>
