--- a/src/app/core/navbar/navbar.component.css
+++ b/src/app/core/navbar/navbar.component.css
@@ -63,10 +63,11 @@
   .school-name {
     font-size: 16px;
   }
+  
 }
 
 .navbar-brand {
-  margin-left: -50px;   /* 👈 thoda left shift */
+  margin-left: -30px;   /* 👈 thoda left shift */
 }
 
 .navbar .container {
@@ -76,3 +77,27 @@
 .navbar-nav {
   margin-right: -50px;   /* 👈 adjust value */
 }
+
+@media (max-width: 576px) {
+  .navbar-brand {
+    margin-left: 0;
+  }
+
+  .school-logo {
+    height: 50px;
+    width: 50px;
+  }
+
+  .school-name {
+    font-size: 18px;
+    max-width: 10px;       /* 🔥 key fix */
+    /* overflow: hidden; */
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .navbar-toggler {
+    padding: 4px 6px;
+  }
+}
+
