--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-notice-bar></app-notice-bar>
-<app-navbar></app-navbar>
+<app-navbar *ngIf="!router.url.startsWith('/admin')"></app-navbar>
 <router-outlet></router-outlet>
-<app-footer></app-footer>
+<app-footer *ngIf="!router.url.startsWith('/admin')"></app-footer>
